--- a/Map.html
+++ b/Map.html
@@ -29,7 +29,7 @@
                         "http://c.tile.osm.org/{z}/{x}/{y}.png"
                     ],
                     "tileSize": 256,
-                    "attribution": "PTV, HERE"
+                    "attribution": "&copy; OpenStreetMap contributors"
                 }
             },
             "layers": [{
@@ -37,7 +37,7 @@
                 "type": "raster",
                 "source": "simple-tiles",
                 "minzoom": 0,
-                "maxzoom": 23
+                "maxzoom": 19
             }]
         },
         zoom: 12 // starting zoom
