--- a/Map.html
+++ b/Map.html
@@ -15,13 +15,12 @@
 <div id='map'></div>
 <script>
 
-    // This is my personal api key. Please get your own free key at https://developer.myptv.com/
-    const apiKey = 'YjA2OGIzOGMxMjdiNGZkOGIwYTMwNmI0OGE4Y2ZiMTc6Y2QwZjUyMDYtMTk2Ni00N2NlLWFmNTYtNzBjOWZjZTgxNzJh';
+    const apiKey = '<YOUR API KEY>';
 
     const map = new maplibregl.Map({
         container: 'map', // container id
         attributionControl: true,
-        customAttribution: '&copy; 2021 PTV AG, HERE',
+        customAttribution: '&copy; 2022 PTV AG, HERE',
         pitch: 0,
         antialias: true,
         hash: true,
