--- a/Map.html
+++ b/Map.html
@@ -3,28 +3,35 @@
     <meta charset='utf-8' />
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://unpkg.com/maplibre-gl@1.14.0-rc.1/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl@1.14.0-rc.1/dist/maplibre-gl.css' rel='stylesheet' />
+    <script src='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js'></script>
+    <link href='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css' rel='stylesheet' />
     <style>
-        body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
 
 <div id='map'></div>
 <script>
-
-    const apiKey = '<YOUR API KEY>';
+    const apiKey = get('apiKey');
 
     const map = new maplibregl.Map({
         container: 'map', // container id
         attributionControl: true,
-        customAttribution: '&copy; 2022 PTV AG, HERE',
         pitch: 0,
         antialias: true,
         hash: true,
-        style: 'https://vectormaps-resources.myptv.com/styles/1_1_0/monochrome.json',
+        style: 'https://vectormaps-resources.myptv.com/styles/latest/standard.json',
         transformRequest: (url, resourceType) => {
             if (resourceType === 'Tile' && url.startsWith('https://api.myptv.com')) {
                 return {
@@ -37,33 +44,48 @@
 
     // Add controls to the map.
     map.addControl(new maplibregl.NavigationControl());
-    
-    function setMarker(latitude, longitude, zoom, pitch, duration) {
-        const mapLocation = [latitude, longitude];
 
-        // fly to location
-        map.flyTo({
-            center: [latitude, longitude],
-            pitch: pitch,
-            bearing: 0,
-            duration: duration,
-            zoom: zoom
+    map.on('click', function (e) {
+        CefSharp.PostMessage({ Event: "click", Lng: e.lngLat.lng, Lat: e.lngLat.lat });
+    });
+
+    var currentMarkers = [];
+    function setLocations(locationStr) {
+        // remove markers 
+        if (currentMarkers !== null) {
+            for (var i = currentMarkers.length - 1; i >= 0; i--) {
+                currentMarkers[i].remove();
+            }
+        }
+
+        var llb = new maplibregl.LngLatBounds();
+        var locations = JSON.parse(locationStr);
+        locations.forEach(l => {
+            const mapLocation = [l.ReferencePosition.Longitude, l.ReferencePosition.Latitude];
+            llb.extend(mapLocation);
+            // Add a marker with popup
+            const marker = new maplibregl.Marker()
+                .setLngLat(mapLocation)
+                .addTo(map);
+
+            const popup = new maplibregl.Popup()
+                .setLngLat(mapLocation)
+                .setHTML(l.FormattedAddress)
+                .addTo(map);
+
+            marker.setPopup(popup);
+
+            currentMarkers.push(marker)
         });
 
-        // Add a marker with popup
-        const marker = new maplibregl.Marker()
-            .setLngLat(mapLocation)
-            .addTo(map);
+        map.fitBounds(llb);
+    }
 
-        const popup = new maplibregl.Popup({ offset: 25 })
-            .setLngLat(mapLocation)
-            .setHTML("<b>Hello world!</b><br />I am a popup.")
-            .addTo(map);
-
-        marker.setPopup(popup);
-    };
+    function get(name){
+        if(name=(new RegExp('[?&]'+encodeURIComponent(name)+'=([^&]*)')).exec(location.search))
+        return decodeURIComponent(name[1]);
+    }
 
 </script>
-
 </body>
 </html>
